--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
-.App {
-  text-align: center;
+body{
+    /* background-image: url('../public/bt.avif');
+    background-position: left;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover; */
+    /* background-color: #17151f !important; */
+}
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+@font-face {
+    font-family: 'Merriweather';
+    src: url('../public/font/Merriweather-Regular.woff2') format('woff2'),
+        url('../public/font/Merriweather-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1,h2,h3,h4,h5{
+    font-family: 'Merriweather';
+
+}
+p{
+    font-family: 'Roboto', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+.react-multi-carousel-dot-list{
+    bottom: 5px !important;
+}
+.react-multi-carousel-dot button {
+    width: 18px !important;
+    border-radius: 8px !important;
+    border: none !important;
+    height: 8px !important;
+
+}
+.react-multi-carousel-dot--active button {
+    background: #1e1e1e !important;
+}
+
+
+
+/* Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #FFDD2A #000000;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  /* Chrome, Edge and Safari */
+  *::-webkit-scrollbar {
+    width: 7px;
+    width: 7px;
   }
-  to {
-    transform: rotate(360deg);
+  *::-webkit-scrollbar-track {
+    border-radius: 0px;
+    background-color: #000000;
   }
-}
+  
+  *::-webkit-scrollbar-track:hover {
+    background-color: #000000;
+  }
+  
+  *::-webkit-scrollbar-track:active {
+    background-color: #000000;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    border-radius: 3px;
+    background-color: #FFDD2A;
+  }
+  
+  *::-webkit-scrollbar-thumb:hover {
+    background-color: #F4D428;
+  }
+  
+  *::-webkit-scrollbar-thumb:active {
+    background-color: #FFDD2A;
+  }
+  
